--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "^9.1.2",
     "redux-saga": "^1.3.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-vercel": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
