--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "esri-leaflet": "^3.0.12",
     "leaflet": "^1.9.4",
+    "leaflet.polylinemeasure": "^3.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
